[gd_scene load_steps=17 format=2]

[ext_resource path="res://Interface/Health/EnemyHealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Interface/Health/Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actors/Enemies/Slime.gd" type="Script" id=3]
[ext_resource path="res://art/enemies/Slime/slime_3.png" type="Texture" id=4]
[ext_resource path="res://art/enemies/Slime/slime_2.png" type="Texture" id=5]
[ext_resource path="res://art/enemies/Slime/slime_1.png" type="Texture" id=6]
[ext_resource path="res://art/Flash.tres" type="Shader" id=7]

[sub_resource type="CircleShape2D" id=12]
radius = 36.5137

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36, 38.5 )

[sub_resource type="CircleShape2D" id=4]
radius = 916.079

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/hit_opacity = 0.0

[sub_resource type="Animation" id=7]
resource_name = "Air"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Wiggle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Slime" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 3 )

[node name="Health" parent="." instance=ExtResource( 2 )]
max_health = 30

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
margin_left = -49.0
margin_top = -88.0
margin_right = 51.0
margin_bottom = -68.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -16 )
shape = SubResource( 12 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 1, -17.5 )
shape = SubResource( 3 )

[node name="JumpCD" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DetectionRadius" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 9 )
position = Vector2( 1, -19 )
scale = Vector2( 2.8125, 3.25 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Air = SubResource( 7 )
anims/Idle = SubResource( 5 )
anims/Wiggle = SubResource( 6 )

[node name="ChargeUp" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[node name="FlashPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/hit = SubResource( 11 )

[connection signal="dead" from="Health" to="." method="_on_Health_dead"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="JumpCD" to="." method="_on_JumpCD_timeout"]
[connection signal="body_entered" from="DetectionRadius" to="." method="_on_DetectionRadius_body_entered"]
[connection signal="body_exited" from="DetectionRadius" to="." method="_on_DetectionRadius_body_exited"]
[connection signal="timeout" from="ChargeUp" to="." method="_on_ChargeUp_timeout"]
